--- a/.drone.yml
+++ b/.drone.yml
@@ -31,7 +31,7 @@ steps:
         from_secret: docker_user
       password:
         from_secret: docker_pass
-      repo: ${DOCKER_REGISTRY}/${DOCKER_NS}/${DRONE_REPO_NAME}
+      repo: $DOCKER_REGISTRY/$DOCKER_NS/${DRONE_REPO_NAME}
       tags: ${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}
 
   - name: deploy
@@ -52,7 +52,7 @@ steps:
         [
           {
             "name": "${DRONE_REPO_NAME}",
-            "image": "${DOCKER_REGISTRY}/${DOCKER_NS}/${DRONE_REPO_NAME}:${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}"
+            "image": "$DOCKER_REGISTRY/$DOCKER_NS/${DRONE_REPO_NAME}:${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}"
           }
         ]
 
