--- a/.drone.yml
+++ b/.drone.yml
@@ -17,30 +17,19 @@ steps:
 
   - name: docker
     image: plugins/docker
-    environment:
-      DOCKER_REGISTRY:
-        from_secret: docker_registry
-      DOCKER_NS:
-        from_secret: docker_ns
     settings:
-      registry:
-        from_secret: docker_registry
+      registry: registry.cn-hangzhou.aliyuncs.com
       mirror:
         from_secret: docker_mirror
       username:
         from_secret: docker_user
       password:
         from_secret: docker_pass
-      repo: $DOCKER_REGISTRY/$DOCKER_NS/${DRONE_REPO_NAME}
+      repo: registry.cn-hangzhou.aliyuncs.com/dexdev/${DRONE_REPO_NAME}
       tags: ${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}
 
   - name: deploy
     image: ystyle/drone-plugin-rancher2
-    environment:
-      DOCKER_REGISTRY:
-        from_secret: docker_registry
-      DOCKER_NS:
-        from_secret: docker_ns
     settings:
       access_key:
         from_secret: rancher_key
@@ -52,7 +41,7 @@ steps:
         [
           {
             "name": "${DRONE_REPO_NAME}",
-            "image": "$DOCKER_REGISTRY/$DOCKER_NS/${DRONE_REPO_NAME}:${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}"
+            "image": "registry.cn-hangzhou.aliyuncs.com/dexdev/${DRONE_REPO_NAME}:${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}"
           }
         ]
 
