--- a/.drone.yml
+++ b/.drone.yml
@@ -25,7 +25,7 @@ steps:
         from_secret: docker_user
       password:
         from_secret: docker_pass
-      repo: registry.cn-hangzhou.aliyuncs.com/dexdev/${DRONE_REPO_NAME}
+      repo: registry.cn-hangzhou.aliyuncs.com/dexdev/kuu
       tags: ${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}
 
   - name: deploy
@@ -41,7 +41,7 @@ steps:
         [
           {
             "name": "${DRONE_REPO_NAME}",
-            "image": "registry.cn-hangzhou.aliyuncs.com/dexdev/${DRONE_REPO_NAME}:${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}"
+            "image": "registry.cn-hangzhou.aliyuncs.com/dexdev/kuu:${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}"
           }
         ]
 
