--- a/.drone.yml
+++ b/.drone.yml
@@ -40,7 +40,7 @@ steps:
       data: |
         [
           {
-            "name": "${DRONE_REPO_NAME}",
+            "name": "kuu-boilerplate",
             "image": "registry.cn-hangzhou.aliyuncs.com/dexdev/kuu-boilerplate:${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER}"
           }
         ]
